# X11clippy

./: .gitignore  Readme.md
src/: CMakeLists.txt  clippy.cpp  clippyutils.cpp  xreader.cpp  xtargets.cpp  xwriter.cpp
